<resources>
    <string name="app_name">Kikbak</string>
    <string name="action_suggest">+ SUGGEST</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="registration_failed">Registration failed. Try again.</string>
    <string name="login_never_post_to_facebook">"We use your Facebook ID to personalize the offers you share and notify you when you've earned a reward.\nWe will never post without your permission."</string>
    <string name="too_few_friends">"For security purposes, Kikbak requires that your Facebook account have a certain minimum friend count. Unfortunately your chosen account does not qualify."</string>
    <string name="ok">OK</string>
    <string name="title_offers">Give</string>
    <string name="title_redeem">Redeem</string>
    <string name="location_disabled_title">Location services are disabled</string>
    <string name="location_disabled_message">Please enable location services in device settings.</string>
    <string name="ribbon_give">GIVE</string>
    <string name="ribbon_get">GET</string>
    <string name="ribbon_off">OFF</string>
    <string name="ribbon_give_amount_fmt">$%.0f</string>
    <string name="ribbon_give_percentage_fmt">%.0f%%</string>
    <string name="ribbon_get_fmt">$%.0f</string>
    <string name="bummer">Bummer!</string>
    <string name="no_offers">There are no Kikbak\noffers available in your area</string>
    <string name="tell_about">"Tell us about a business that you'd like to recommend to friends with a special offer"</string>
    <string name="suggest_btn">Suggest A Business</string>
    <string name="location_disabled">Location services are disabled, please enable them in device settings.</string>
    <string name="redeem_empty_doh">Doh!</string>
    <string name="redeem_empty_note">"You haven't received any gifts or earned any credit."</string>
    <string name="redeem_empty_advise">"You can change that by giving an offer to your friends. You'll earn credit for every friend that redeems."</string>
    <string name="redeem_empty_button">See Offers To Give To Friends</string>
    <string name="give_give">Give %s</string>
    <string name="give_get">Get %s</string>
    <string name="give_to_friends">I agree to the Terms and Conditions and the Kikbak Privacy Policy</string>
    <string name="give_gift_optional_note">Optional text, you can put 40 characters here.</string>
    <string name="give_get_optional_note">For every friend that redeems your gift</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="hint_add_comment">Add comment</string>
    <string name="take_photo">Take a photo</string>
    <string name="add_photo">Add your own photo</string>
    <string name="share_failed_toast">We were unable to share your gift. Please try again.</string>
    <string name="send_gift">Send</string>
    <string name="addressbook_empty">"You don't have any contacts with email"</string>
    <string name="terms_title">Terms and conditions for offer</string>
    <string name="accept_terms">Accept Terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_options_title">Give offer to friends</string>
    <string name="share_options_employee_note">Let friends know who helped you:</string>
    <string name="share_options_employee_name_hint">Suggest an employee [optional]</string>
    <string name="share_options_location_note">Choose your preferred location</string>
    <string name="share_options_location_hint">Suggest a nearby store</string>
    <string name="share_in_progress">Sharing gift&#8230;</string>
    <string name="share_pick_button_email">Generate Email</string>
    <string name="share_pick_button_sms">Generate SMS</string>
    <string name="share_thank_you">Thank you!</string>
    <string name="share_success_note">We will notify you when a friend uses your gift and you earn a reward.</string>
    <string name="share_thank_you_give_only">Success!</string>
    <string name="share_success_note_give_only">You have shared a gift. We will notify you when a friend claims it.</string>
    <string name="facebook_story_title_fmt">%1$s for %2$s</string>
    <string name="facebook_story_first_line_fmt">%1$s %2$s.</string>
    <string name="facebook_story_second_line_fmt">%1$s was at %2$s at %3$s in %4$s, %5$s.</string>
    <string name="reward_gift_label">USE OFFER</string>
    <string name="reward_gift_type_percentage_fmt">%.0f%% off</string>
    <string name="reward_gift_type_amount_fmt">$%.0f off</string>
    <string name="reward_credit_purchase_label">USE EARNED CREDIT</string>
    <string name="reward_credit_purchase_amount_fmt">$%.2f</string>
    <string name="reward_credit_claim_label">CLAIM REWARD</string>
    <string name="reward_credit_claim_amount_fmt">$%.0f Debit Card</string>
    <plurals name="credit_redeem_count">
        <item quantity="one">Your gift has been redeemed by one friend</item>
        <item quantity="other">Your gift has been redeemed by %d friends</item>
    </plurals>
    <string name="credit_label">Credit to be applied to purchase</string>
    <string name="credit_change">Change</string>
    <string name="credit_warning">WARNING: If you apply more credit than your purchase total, you will permanently lose all excess credit applied.</string>
    <string name="scan_code">Scan QR code to Redeem</string>
    <string name="redeem_card_ready">You have a reward ready to be claimed!</string>
    <string name="gift_card">Gift Card</string>
    <string name="gift_card_vz">Prepaid Debit Card</string>
    <string name="claim_reward">Claim Reward Now</string>
    <string name="redeem_store">Redeem In Store</string>
    <string name="redeem_online">Redeem Online</string>
    <string name="change_amount_title">Change amount</string>
    <string name="credit_available_label">Credit available</string>
    <string name="credit_to_use_label">Set amount to use</string>
    <string name="apply">Apply</string>
    <string name="credit_amount_fmt">$%.2f</string>
    <string name="gift_card_amount_fmt">$%.0f</string>
    <string name="redeem_gift_confirmation">You must be at the register to redeem.\n\nAre you ready to redeem this offer?</string>
    <string name="redeem_invalid_code">Sorry, that QR code is not recognized or is invalid.\n\nWould you like to try again?</string>
    <string name="redeem_not_in_store">Oops! You have to be in the store to redeem.\n\nLooks like you might not be there yet. Try again?</string>
    <string name="redeem_credit_confirmation">If you use more credit than your purchase total, you will lose all excess credit.\n\nYou have chosen to redeem $%.2f credit. Is this right?</string>
    <string name="redeem_failure">Something went wrong, please try again.</string>
    <string name="redeem_success_title">Success!</string>
    <string name="redeem_success_your_code">YOUR DISCOUNT CODE</string>
    <string name="redeem_gift_success_note_first">Please show this screen when paying.</string>
    <string name="redeem_gift_success_note_first_online">You have claimed the offer.</string>
    <string name="redeem_gift_success_share_note">Share the same offer with your friends.</string>
    <string name="redeem_gift_success_share_button">Give To Others</string>
    <string name="redeem_gift_success_use_online">Use Online Now</string>
    <string name="redeem_credit_success_note_first">You have claimed your credit.</string>
    <string name="redeem_credit_success_note_second">Please show this screen to the cashier.</string>
    <string name="redeem_credit_success_value_desc">can now be applied to your purchase</string>
    <string name="redeem_credit_success_share_note">Share the offer with more friends\nand earn even more credit</string>
    <string name="redeem_credit_success_share_button">Ready To Give To More Friends</string>
	<string name="coupon_code_clip">Coupon code</string>
	<string name="copied_to_clipboard">Coupon code copied to clipboard</string>
	<string name="offer_expires">Offer expires: %s</string>
    <string name="redeem_chooser_title">Select one to redeem</string>
    <string name="or">OR</string>
    <string name="scan_now">Scan now</string>
    <string name="scan_desc">"Scan QR code on the cashier's Kikbak Card"</string>
    <string name="scan_tip">Hold still for scan</string>
    <string name="claim_card_instruction">Please provide the following to redeem:</string>
    <string name="claim_card_phone_hint">Phone number</string>
    <string name="claim_card_phone_hint_vz">Your Verizon Wireless phone number</string>
    <string name="claim_card_name_hint">First Last Name</string>
    <string name="claim_card_street_hint">Street</string>
    <string name="claim_card_apt_hint">Apartment or Unit #</string>
    <string name="claim_card_city_hint">City</string>
    <string name="claim_card_state_hint">State</string>
    <string name="claim_card_zip_hint">Zip</string>
    <string name="claim_card_arrival">Your reward should arrive in 2 to 4 weeks.</string>
    <string name="claim_card_arrival_verizon">For your first reward, a prepaid card will be mailed to the billing address associated with your Verizon account. Additional rewards will be loaded directly onto the same debit card. Please allow 2–4 weeks for delivery or reloading of card.</string>
    <string name="claim_card_submit">Submit</string>
    <string name="claim_success_share_button">Share Offer Again</string>
    <string name="claim_zip_empty">ZIP cannot be empty</string>
    <string name="claim_zip_wrong_format">This is not a valid ZIP code, use XXXXX or XXXXX-XXXX pattern"</string>
    <string name="claim_city_empty">City cannot be empty</string>
    <string name="claim_state_empty">State cannot be empty</string>
    <string name="claim_name_empty">Name cannot be empty</string>
    <string name="claim_street_empty">Street cannot be empty</string>
    <string name="claim_phone_empty">Phone number cannot be empty</string>
    <string name="claim_phone_wrong_format">This is not a valid phone number</string>
    <string name="claim_failed">Sorry, the information you entered is not recognized as valid.\n\nPlease ensure that it is accurate and try again.</string>
    <string name="claim_failed_retry">Retry</string>
    <string name="claim_success_title">Success!</string>
    <string name="claim_success_msg">Your reward claim has been submitted.</string>
    <string name="activity_suggest">Suggest</string>
    <string name="suggest_desc">"Want to recommend a business with a special offer? Tell us and we'll let them know that they should join Kikbak."</string>
    <string name="businnes_name_hint">Business name</string>
    <string name="businnes_why_hint">What makes them great</string>
    <string name="suggest_send">Let Us Know</string>
    <string name="select_friend_label">Select the friend whose gift you would like to redeem</string>
    <string name="suggest_success_title">Thanks for your suggestion</string>
    <string name="suggest_success_note">"We'll pass it along and let you know when the business joins Kikbak."</string>
    <string name="done">Done</string>
</resources>