<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/reward_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reward_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="15sp" />
    </LinearLayout>

    <!-- ********************* start of the form ************************** -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/claim_card_instruction" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/claim_card_phone_hint"
            android:maxLines="1" />

        <EditText
            android:id="@+id/first_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/claim_card_name_hint"
            android:maxLines="1" />

        <EditText
            android:id="@+id/address_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/claim_card_street_hint"
            android:maxLines="1" />

        <EditText
            android:id="@+id/address_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/claim_card_city_hint"
            android:maxLines="1" />

        <EditText
            android:id="@+id/address_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/claim_card_state_hint"
            android:maxLines="1" />

        <EditText
            android:id="@+id/address_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/claim_card_zip_hint"
            android:maxLines="1" />

        <!-- ********************* end of the form **************************** -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/claim_card_arrival" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/claim_card_submit" />
    </LinearLayout>

</LinearLayout>