<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_suggest"
        android:orderInCategory="99"
        android:title="@string/action_suggest"
        compat:showAsAction="always|withText"/>
    <item
        android:id="@+id/action_fixed_location"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:checkable="true"
        android:title="use fixed location"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_login"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:title="@string/action_login"/>
    <item
        android:id="@+id/action_clear_registration"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="clear registration"/>
    <item
        android:id="@+id/action_gcm"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="cloud messaging"/>

</menu>