<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kikbak="http://schemas.android.com/apk/res/com.referredlabs.kikbak"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e5e5"
    android:orientation="vertical" >

    <com.referredlabs.kikbak.widget.TtfTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:text="@string/redeem_empty_doh"
        android:textColor="#3a3a3a"
        android:textSize="36dp"
        kikbak:typeface="Roboto-Bold.ttf" />

    <com.referredlabs.kikbak.widget.TtfTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/redeem_empty_note"
        android:textColor="#3a3a3a"
        android:textSize="21dp"
        kikbak:typeface="Roboto-Regular.ttf" />

    <com.referredlabs.kikbak.widget.TtfTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/redeem_empty_advise"
        android:textColor="#3a3a3a"
        android:textSize="16dp"
        kikbak:typeface="Roboto-Regular.ttf" />

    <com.referredlabs.kikbak.widget.TtfButton
        android:id="@+id/offers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_blue"
        android:text="@string/redeem_empty_button"
        android:textColor="@android:color/white"
        android:textSize="21dp"
        kikbak:typeface="Roboto-Light.ttf" />

</LinearLayout>