<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kikbak="http://schemas.android.com/apk/res/com.referredlabs.kikbak"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <com.referredlabs.kikbak.widget.TtfTextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="#e5e5e5"
        android:gravity="center"
        android:text="Zen Yoga"
        android:textColor="#3a3a3a"
        android:textSize="31dp"
        kikbak:typeface="Roboto-Light.ttf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#98bbe7"
        android:gravity="center"
        android:orientation="vertical" >

        <com.referredlabs.kikbak.widget.TtfTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/redeem_success_title"
            android:textColor="#0f4689"
            android:textSize="31dp"
            kikbak:typeface="Roboto-Bold.ttf" />

        <com.referredlabs.kikbak.widget.TtfTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/redeem_credit_success_note_first"
            android:textColor="#0f4689"
            android:textSize="17dp"
            kikbak:typeface="Roboto-Regular.ttf" />

        <com.referredlabs.kikbak.widget.TtfTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/redeem_credit_success_note_second"
            android:textColor="#0f4689"
            android:textSize="17dp"
            kikbak:typeface="Roboto-Regular.ttf" />
    </LinearLayout>

    <com.referredlabs.kikbak.widget.TtfTextView
        android:id="@+id/redeem_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="$15.00"
        android:textColor="#3a3a3a"
        android:textSize="46dp"
        kikbak:typeface="Roboto-Bold.ttf" />

    <com.referredlabs.kikbak.widget.TtfTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/redeem_credit_success_value_desc"
        android:textColor="#3a3a3a"
        android:textSize="17dp"
        kikbak:typeface="Roboto-Regular.ttf" />

    <ViewStub
        android:id="@+id/barcode_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout="@layout/fragment_redeem_success_barcode" />

    <com.referredlabs.kikbak.widget.TtfTextView
        android:id="@+id/share_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/redeem_credit_success_share_note"
        android:textColor="#3a3a3a"
        android:textSize="17dp"
        kikbak:typeface="Roboto-Regular.ttf" />

    <com.referredlabs.kikbak.widget.TtfButton
        android:id="@+id/give"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/btn_blue"
        android:text="@string/redeem_credit_success_share_button"
        android:textColor="@android:color/white"
        android:textSize="21dp"
        kikbak:typeface="Roboto-Light.ttf" />

</LinearLayout>