<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kikbak="http://schemas.android.com/apk/res/com.referredlabs.kikbak"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="14dp"
    android:paddingRight="14dp"
    android:paddingTop="16dp"
    android:paddingBottom="10dp"
    android:background="@android:color/white" >

    <com.referredlabs.kikbak.widget.TtfTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redeem_card_ready"
        kikbak:typeface="Roboto-Regular.ttf"
       	android:textColor="#3a3a3a"
        android:textSize="14dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#c4c4c4" />

    <com.referredlabs.kikbak.widget.TtfTextView
        android:id="@+id/credit_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$15"
        kikbak:typeface="Roboto-Bold.ttf"
       	android:textColor="#3a3a3a"
        android:textSize="36dp" />

    <com.referredlabs.kikbak.widget.TtfTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gift_card"
        kikbak:typeface="Roboto-Regular.ttf"
       	android:textColor="#3a3a3a"
        android:textSize="20dp" />

	<com.referredlabs.kikbak.widget.TtfTextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/terms"
        kikbak:typeface="Roboto-Regular.ttf"
        android:textColor="#686868"
        android:textSize="13dp" />

</LinearLayout>