<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/gift_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_gift"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:text="Get $10 credit"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/gift_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gift_desc"
        android:layout_centerHorizontal="true"
        android:text="@string/give_gift_optional_note" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/gift_note"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#999999" />

    <TextView
        android:id="@+id/get_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:text="Give $10 off $50"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/get_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/get_desc"
        android:layout_centerHorizontal="true"
        android:text="@string/give_get_optional_note" />
    
    <TextView
        android:textSize="12sp"
        android:id="@+id/terms"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/get_note"
        android:layout_alignParentLeft="true"
        android:text="@string/terms" />

    <TextView
        android:textSize="12sp"
        android:id="@+id/learn_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/terms"
        android:layout_alignParentRight="true"
        android:text="@string/learn_more" />

</RelativeLayout>